--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "browser-refresh server.js"
+    "dev": "browser-refresh server.js",
+    "migration" : "node ./data/make.js migration"
   },
   "author": "",
   "license": "ISC",
