--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "browser-refresh server.js",
-    "migration" : "node ./data/make.js migration"
+    "migration": "node ./data/make.js migration"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mysql2": "^3.6.3",
+    "node-mailjet": "^6.0.4",
     "pug": "^3.0.2"
   }
 }
