Ajout envoi de mail à l'inscription

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,15 @@
 APP_ENV=dev
 PORT=3000
 
-
+# MySQL
 SQL_HOST = localhost
 SQL_USER = root
 SQL_PASSWORD = 
 SQL_PORT = 3306
 SQL_DBNAME = 
 
-
-
+# MailJet
+MJ_MAIL_SOCIETE = 
+MJ_NOM_SOCIETE = 
 MJ_APIKEY_PUBLIC = 
 MJ_APIKEY_PRIVATE = 
